--- a/style.css
+++ b/style.css
@@ -32,7 +32,8 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 2.5em 0;
+    margin: 2em 0;
+
 }
 
 button + button {
@@ -43,6 +44,7 @@ button {
     padding: 0.5em 1.2em;
     font-size: 1.3rem;
     border: none;
+    border-radius: 10px;
 
     cursor: pointer;
     transition: opacity 0.3s ease-in-out;
@@ -61,14 +63,12 @@ button:hover {
 }
 
 .scissors {
-    background: #351d01;
-    color: white;
+    background: #351d01
 }
 
 .result {
-    font-size: 1.3rem;
-    font-weight: 800;
-    letter-spacing: 5px;
+    font-size: 1rem;
+    font-weight: 600;
     margin-bottom: 1em;
 }
 
@@ -85,14 +85,12 @@ button:hover {
 
 .score__user {
     color: #0f0755;
-    font-size: 1.2rem;
     margin-left: 0.2em;
     font-weight: 600;
 }
 
 .score__computer {
     color: #888a0a;
-    font-size: 1.2rem;
     margin-left: 0.2em;
     font-weight: 600;
 }
